--- a/examples/rectangle.html
+++ b/examples/rectangle.html
@@ -3,19 +3,6 @@
         <script src="../build/rendercrank.js" type="text/javascript"></script>
     </head>
     <body>
-        <canvas id="myCanvas" width=600 height=400></canvas>
-        <script type="text/javscript">
-            const { Scene, CanvasRenderer } = RenderCrank;
-
-            const renderer = new CanvasRenderer(document.getElementById('myCanvas'));
-
-            const scene = renderer.component((context) => {
-                context.color(0xff0000);
-                context.fillRect(200, 200, 400, 400);
-            });
-
-            renderer.render(scene);
-
-        </script>
+        <script type="text/javascript" src="rectangle.js"></script>
     </body>
 </html>
