--- a/examples/rectangle.html
+++ b/examples/rectangle.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8"/>
         <script src="../build/rendercrank.js" type="text/javascript"></script>
     </head>
     <body>
