--- a/examples/rectangle/index.html
+++ b/examples/rectangle/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
+        <link rel="stylesheet" href="../style.css"/>
         <script src="../../build/rendercrank.development.js" type="text/javascript"></script>
     </head>
     <body>
